--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "strictNullChecks": true,
+    "removeComments": true,
+    "noUncheckedIndexedAccess": true
   }
 }
